docs/v0.2.0a100/_sources/reference/_autosummary/hpcflow.sdk.submission.schedulers.sge.SGEPosix.rst.txt
hpcflow.sdk.submission.schedulers.sge.SGEPosix
==============================================

.. currentmodule:: hpcflow.sdk.submission.schedulers.sge

.. autoclass:: SGEPosix
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~SGEPosix.cancel_jobs
      ~SGEPosix.format_array_request
      ~SGEPosix.format_core_request_lines
      ~SGEPosix.format_options
      ~SGEPosix.format_std_stream_file_option_lines
      ~SGEPosix.format_switch
      ~SGEPosix.get_job_state_info
      ~SGEPosix.get_job_statuses
      ~SGEPosix.get_login_nodes
      ~SGEPosix.get_submit_command
      ~SGEPosix.get_version_info
      ~SGEPosix.is_jobscript_active
      ~SGEPosix.is_num_cores_supported
      ~SGEPosix.parse_submission_output
      ~SGEPosix.process_resources
      ~SGEPosix.wait_for_jobscripts
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SGEPosix.DEFAULT_ARRAY_ITEM_VAR
      ~SGEPosix.DEFAULT_ARRAY_SWITCH
      ~SGEPosix.DEFAULT_CWD_SWITCH
      ~SGEPosix.DEFAULT_DEL_CMD
      ~SGEPosix.DEFAULT_JS_CMD
      ~SGEPosix.DEFAULT_LOGIN_NODES_CMD
      ~SGEPosix.DEFAULT_LOGIN_NODE_MATCH
      ~SGEPosix.DEFAULT_SHEBANG_ARGS
      ~SGEPosix.DEFAULT_SHELL_ARGS
      ~SGEPosix.DEFAULT_SHOW_CMD
      ~SGEPosix.DEFAULT_SUBMIT_CMD
      ~SGEPosix.state_lookup
   
   